--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <div id="home" class="flex-center flex-column">
                 <img src="assets/1.jpeg" alt="waiy logo">
-                <a class="btn"href="/game.html">ابدأ</a>
+                <a class="btn"href="game.html">ابدأ</a>
             </div>
             <div class="bot-logos">
                 <img src="assets/google.png" alt="waiy logo">
