--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
                     <p class="choice-text"> اختبر وعيك في تحدي اكتشاف الاحتيال ! </p>
                 </div>
                 <div class="choice-container2">
-                    <a id=phish href="/odus/index.html">
+                    <a id=phish href="odus/index.html">
                     <p class="choice-text"> بمناسبة الحفل هنالك درجات اضافية على الاودس مباشرة </p>
                 </div>
             </div>
