--- a/end.html
+++ b/end.html
@@ -16,7 +16,7 @@
             <div id="end" class="flex-center flex-column">
                 <h1>حصلت على </h1>
                 <h1 id="sc"></h1>
-                <a class="btn"href="/index.html">الرجوع للبداية</a>
+                <a class="btn"href="index.html">الرجوع للبداية</a>
             </div>
 
         <script src="end.js"></script>
