--- a/odus/main/warning.html
+++ b/odus/main/warning.html
@@ -11,7 +11,7 @@
         <img id="imggg" src="warning.png" alt="تحذير">
         <h1>تحذير!</h1>
         <p>إذا مشت عليك، لازم تكون #واعي_اكثر</p>
-        <a class="btn"href="index.html">الرجوع للبداية</a>
+        <a class="btn"href="../../index.html">الرجوع للبداية</a>
 
     </div>
 </body>
