--- a/odus/index.html
+++ b/odus/index.html
@@ -45,14 +45,14 @@
         <table width="952" height="382" border="0" cellpadding="0" cellspacing="0" dir="rtl">
             <tr>
                 <td>
-                    <img src="odus/home_02.jpg" width="438" height="146" alt="home_02.jpg">
+                    <img src="home_02.jpg" width="438" height="146" alt="home_02.jpg">
                 </td>
                 <td rowspan="3">
-                    <img src="odus/home_01.jpg" width="514" height="382" alt="home_01.jpg">
+                    <img src="home_01.jpg" width="514" height="382" alt="home_01.jpg">
                 </td>
             </tr>
             <tr>
-                <td background="odus/home_03.jpg" style="width: 438px; height: 152px;">
+                <td background="home_03.jpg" style="width: 438px; height: 152px;">
                     <table style="width: 100%; direction: rtl;" cellpadding="0" cellspacing="0">
                         <tr>
                             <td class="delabel" scope="row" style="width: 15px;">&nbsp;</td>
@@ -66,7 +66,7 @@
                             </td>
                             <td>
                                 <a href="javascript:void(0);" onclick="validateForm()">
-                                    <img border="0" src="odus/login.jpg" />
+                                    <img border="0" src="login.jpg" />
                                 </a>
                             </td>
                         </tr>
@@ -82,7 +82,7 @@
                                 <input type="hidden" name="ButtonSelected" value="" />
                             </td>
                             <td>
-                                <img border="0" src="odus/pass.jpg" />
+                                <img border="0" src="pass.jpg" />
                             </td>
                         </tr>
                         <tr>
@@ -99,7 +99,7 @@
             </tr>
             <tr>
                 <td>
-                    <img src="odus/home_04.jpg" width="438" height="80" alt="home_04.jpg">
+                    <img src="home_04.jpg" width="438" height="80" alt="home_04.jpg">
                 </td>
             </tr>
         </table>
